# test_rep

examples/blink/main/: blink_example_main.c
examples/kartik/Fade_RGB/main/: blink_example_main.c
examples/kartik/GATT_server/main/: gatts_demo.c
examples/kartik/SPIFFS_READ_FILE/: CMakeLists.txt
examples/kartik/SPIFFS_READ_FILE/main/: CMakeLists.txt  main.c
examples/kartik/SPIFFS_READ_FILE/spiffs_data/: data.txt
examples/kartik/Semaphore/main/: blink_example_main.c
examples/kartik/Smart SwitchBoard/: CMakeLists.txt  Makefile  minicom.ca  partitions_app_2MB_noota.csv  partitions_app_2MB_noota256k_spiffs.csv  partitions_app_ota.csv  partitions_app_ota_4mb.csv  sdkconfig_curr  secure_boot_signing_key.pem
examples/kartik/Smart SwitchBoard/main/: CMakeLists.txt  Kconfig.projbuild  gatt_svr.c  json_parse.c  json_parse.h  main.c  metering.c  metering.h  mqtt_plug.c  ota_bulb_ota.c  ssl_rest.c
examples/kartik/ledc_basic/main/: ledc_basic_example_main.c
examples/kartik/ledc_fade/main/: ledc_fade_example_main.c
